fix:z-index fpr the nav bar

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,5 +1,6 @@
 .heading {
   padding-bottom: 21.1rem;
+  overflow: hidden;
   &__text {
     margin-inline: auto;
     margin-top: 5rem;
