--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -5,6 +5,7 @@
     position: sticky;
     top: 0;
     background: #fff;
+    z-index: 33;
     // border: 1px solid #000;
 
     
@@ -67,6 +68,7 @@
         display: flex;
         align-items: center;
         gap: 4.7rem;
+        z-index: 88;
 
           @media(max-width: 800px){
             flex-direction: column;
